--- a/posts/同学....md
+++ b/posts/同学....md
@@ -4,7 +4,7 @@ description: 要是你看到了我就社4了。
 date: 2025-05-11
 scheduled: 2026-05-15
 tags:
-  - number-2
+  - never-render-this
 layout: layouts/post.njk
 ---
 
